# souffle

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .travis.yml  Makefile.am  README.md  _aggregate_op_8h.html  _aggregate_op_8h__dep__incl.map  _aggregate_op_8h__dep__incl.md5  _aggregate_op_8h__incl.map  _aggregate_op_8h__incl.md5  _aggregate_op_8h_source.html  _aggregator_8h.html  _aggregator_8h__dep__incl.map  _aggregator_8h__dep__incl.md5  _aggregator_8h__incl.map  _aggregator_8h__incl.md5  _aggregator_8h_source.html  _argument_8h.html  _argument_8h__dep__incl.map  _argument_8h__dep__incl.md5  _argument_8h__incl.map  _argument_8h__incl.md5  _argument_8h_source.html  _ast_to_ram_translator_8cpp.html  _ast_to_ram_translator_8cpp_source.html  _ast_to_ram_translator_8h.html  _ast_to_ram_translator_8h__dep__incl.map  _ast_to_ram_translator_8h__dep__incl.md5  _ast_to_ram_translator_8h__incl.map  _ast_to_ram_translator_8h__incl.md5  _ast_to_ram_translator_8h_source.html  _atom_8h.html  _atom_8h__dep__incl.map  _atom_8h__dep__incl.md5  _atom_8h__incl.map  _atom_8h__incl.md5  _atom_8h_source.html  _attribute_8h.html  (+8483 more)
src/: .gitignore  ASTInterpreter.h  AggregateFunction.h  AggregateOp.h  AnalysisType.cpp  AnalysisType.h  AstAbstract.h  AstAnalyses.cpp  AstAnalyses.h  AstAnalysis.h  AstArgument.h  AstAttribute.h  AstClause.cpp  AstClause.h  AstComponent.h  AstComponentChecker.cpp  AstConstraintAnalysis.h  AstFunctorDeclaration.h  AstGroundAnalysis.cpp  AstIO.h  AstIODirective.h  AstIOTypeAnalysis.cpp  AstIOTypeAnalysis.h  AstLiteral.h  AstNode.h  AstParserUtils.cpp  AstParserUtils.h  AstPragma.cpp  AstPragma.h  AstPragmaChecker.cpp  AstPragmaChecker.h  AstProfileUse.cpp  AstProfileUse.h  AstProgram.cpp  AstProgram.h  AstQualifiedName.h  AstRelation.h  AstRelationIdentifier.h  AstRelationOwnershipAnalysis.cpp  AstRelationOwnershipAnalysis.h  (+243 more)
src/ast/: Abstract.h  Aggregator.h  Argument.h  AstAbstract.h  AstArgument.h  AstAttribute.h  AstClause.h  AstComponent.h  AstFunctorDeclaration.h  AstIO.h  AstLiteral.h  AstParserUtils.cpp  AstParserUtils.h  AstPragma.h  AstProgram.h  AstRelation.h  AstTranslationUnit.h  AstType.h  AstUtils.cpp  AstUtils.h  AstVisitor.h  Atom.h  Attribute.h  BinaryConstraint.h  BooleanConstraint.h  Clause.h  Component.h  ComponentInit.h  ComponentType.h  Constant.h  Constraint.h  Counter.h  ExecutionOrder.h  ExecutionPlan.h  Functor.h  FunctorDeclaration.h  IO.h  IntrinsicFunctor.h  LambdaNodeMapper.h  Literal.h  (+30 more)
src/ast/analysis/: Analysis.h  AstConstraint.h  AstConstraintAnalysis.h  AstGround.cpp  AstGround.h  AstGroundAnalysis.cpp  AstIOType.cpp  AstIOType.h  AstIOTypeAnalysis.cpp  AstIOTypeAnalysis.h  AstProfileUse.cpp  AstProfileUse.h  AstType.cpp  AstType.h  AstTypeAnalysis.cpp  AstTypeAnalysis.h  AstTypeEnvironment.cpp  AstTypeEnvironment.h  AstTypeEnvironmentAnalysis.cpp  AstTypeEnvironmentAnalysis.h  AuxArity.cpp  AuxArity.h  AuxArityAnalysis.cpp  AuxArityAnalysis.h  ComponentLookup.cpp  ComponentLookup.h  ComponentLookupAnalysis.cpp  ComponentLookupAnalysis.h  Constraint.h  Ground.cpp  Ground.h  IOType.cpp  IOType.h  (+20 more)
src/interpreter/: InterpreterContext.h  InterpreterEngine.cpp  InterpreterEngine.h  InterpreterGenerator.h  InterpreterIndex.cpp  InterpreterNode.h  InterpreterPreamble.h  InterpreterProgInterface.h  InterpreterRelation.cpp  InterpreterRelation.h
src/profile/: Atom.h  Cell.h  CellInterface.h  Cli.h  DataComparator.h  HtmlString.h  Iteration.h  OutputProcessor.h  ProgramRun.h  Reader.h  Relation.h  Rule.h  StringUtils.h  Tui.h  UserInputReader.h  htmlCssChartist.h  htmlCssStyle.h  htmlJsChartistMin.h  htmlJsChartistPlugin.h  htmlJsMain.h  htmlJsTableSort.h  htmlJsUtil.h  htmlMain.h  html_string.h
src/ram/: Condition.h  Expression.h  Node.h  Operation.h  Program.h  RamCondition.h  RamExpression.h  RamOperation.h  RamProgram.h  RamRelation.h  RamStatement.h  RamTranslationUnit.h  RamUtils.h  RamVisitor.h  Relation.h  Statement.h  TranslationUnit.h  Utils.h  Visitor.h
src/swig/: SwigInterface.cpp  SwigInterface.h  SwigInterface.i
src/synthesiser/: Synthesiser.cpp  SynthesiserRelation.cpp  SynthesiserRelation.h
src/test/: InterpreterLoadMixedTypes.test  Makefile.am  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_utils_test.cpp  binary_relation_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_index_utils_test.cpp  compiled_relation_test.cpp  compiled_tuple_test.cpp  constraints_test.cpp  eqrel_datastructure_test.cpp  file_format_converter_test.cpp  graph_utils_test.cpp  interpreter_relation_test.cpp  matching_test.cpp  max_matching_test.cpp  mpi_test.cpp  parallel_utils_test.cpp  pnappa_datastructure_test.cpp  profile_util_test.cpp  ram_arithmetic_test.cpp  ram_condition_equal_clone_test.cpp  ram_expression_equal_clone_test.cpp  ram_operation_equal_clone_test.cpp  ram_rel_f.test  ram_relation_equal_clone_test.cpp  ram_relation_test.cpp  ram_statement_equal_clone_test.cpp  ram_type_conversion_test.cpp  record_table_test.cpp  relation_test.cpp  symbol_table_test.cpp  table_test.cpp  test.h  test_util.h  type_system_test.cpp  (+1 more)
src/tests/: Makefile.am  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  binary_relation_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_index_utils_test.cpp  compiled_tuple_test.cpp  constraints_test.cpp  eqrel_datastructure_test.cpp  graph_utils_test.cpp  interpreter_relation_test.cpp  matching_test.cpp  max_matching_test.cpp  parallel_utils_test.cpp  profile_util_test.cpp  ram_arithmetic_test.cpp  ram_condition_equal_clone_test.cpp  ram_expression_equal_clone_test.cpp  ram_operation_equal_clone_test.cpp  ram_relation_equal_clone_test.cpp  ram_relation_test.cpp  ram_statement_equal_clone_test.cpp  ram_type_conversion_test.cpp  record_table_test.cpp  symbol_table_test.cpp  table_test.cpp  type_system_test.cpp  util_test.cpp
src/utility/: CacheUtil.h  ContainerUtil.h  EvaluatorUtil.h  FileUtil.h  FunctionalUtil.h  MiscUtil.h  StreamUtil.h  StringUtil.h
(+656 files in other folders)
